# MiV-Criticality-Dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_dashboard.py
app/: app.py  criticality_module.py  git_utils.py
app/assets/: base.css  clinical-analysis.css
app/callbacks/: config_callbacks.py  load_callbacks.py  plot_callbacks.py  save_callbacks.py  tag_callbacks.py
app/components/: __init__.py  control_card.py  layout.py  plot_placeholder.py  tag_selection.py
app/utils/: __init__.py  data_utils.py  plot_utils.py
